# django_cookiecutter

./: cookiecutter.json
{{cookiecutter.project_name}}/: .env.example  .gitignore  .watchmanconfig  manage.py  pyproject.toml  railway.json  readme.md
{{cookiecutter.project_name}}/templates/registration/: login.html
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/: apps.py  middleware.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.app_name}}/templates/{{cookiecutter.app_name}}/: base.html  home.html
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
