[project]
name = "{{cookiecutter.app_name}}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["django>=5.1.5", "python-dotenv>=1.0.1"]

[dependency-groups]
dev = ["djlint>=1.36.4", "pywatchman>=2.0.0"]

[tool.djlint]
ignore = "H030,H031"
