[project]
name = "{{cookiecutter.app_name}}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-browser-reload>=1.17.0",
    "django>=5.1.5",
    "python-dotenv>=1.0.1",
    "gunicorn>=23.0.0",
    "dj-database-url>=2.3.0",
    "psycopg2>=2.9.10",
    "django-fastdev>=1.13.0",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.10",
    "django-extensions>=3.2.3",
    "whitenoise>=6.8.2",
    "gevent>=24.11.1",
]

[dependency-groups]
dev = ["djlint>=1.36.4", "pywatchman>=2.0.0"]

[tool.djlint]
ignore = "H030,H031,T002"
